Lab-14/End/GiftShop/Istio-Manifests/GiftShop-IngressGateway-Http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - giftshopapi.smanyamr.com
    - giftshopui.smanyamr.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: giftshopapi
spec:
  hosts:
  - giftshopapi.smanyamr.com
  gateways:
  - demo-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /swagger
    - uri:
        prefix: /api
    route:
    - destination:
        host: giftshopapi.microservices.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: giftshopui
spec:
  hosts:
  - giftshopui.smanyamr.com
  gateways:
  - demo-ingress-gateway
  http:
  - route:
    - destination:
        host: giftshopui.microservices.svc.cluster.local
        port:
          number: 80
---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: giftshopui
# spec:
#   host: giftshopui.microservices.svc.cluster.local
#   trafficPolicy:
#     loadBalancer:
#       simple: RANDOM
#     # tls:
#     #   mode: ISTIO_MUTUAL
#   subsets:
#   - name: v1
#     labels:
#       version: v1
# ---
