Lab-14/End/GiftShop/Istio-Manifests/GiftShop-IngressGateway-Https-Canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - giftshopapi.smanyamr.com
    - giftshopui.smanyamr.com
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - giftshopapi.smanyamr.com
    - giftshopui.smanyamr.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: giftshopapi
spec:
  hosts:
  - giftshopapi.smanyamr.com
  gateways:
  - demo-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /swagger
    - uri:
        prefix: /api
    route:
    - destination:
        host: giftshopapi
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: giftshopui
spec:
  hosts:
  - giftshopui.smanyamr.com
  gateways:
  - demo-ingress-gateway
  http:
  - route:
    - destination:
        host: giftshopui
        subset: v2
      weight: 75
    - destination:
        host: giftshopui
        subset: v3
      weight: 25
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: giftshopui
spec:
  host: giftshopui
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
